[package]
name = "elevator-project"
version = "1.0.0"
authors = ["Ole Sivert Aarhaug <ole.sivert@aarhaug.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elevator-driver = {git = "https://github.com/stemnic/elevator-driver.git"}
network-rust = { git = "https://github.com/stemnic/network-rust.git" }
serde = { version = "1.0.104", features = ["derive"] }
rand = "0.7.3"
regex = "1"

